k8s/gitops/20-network/base/27-external-secrets/egress/allow-controller-to-aws.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-controller-to-aws
  namespace: external-secrets

spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: external-secrets

  egress:
    - toFQDNs:
        - matchPattern: "*.amazonaws.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
