k8s/gitops/20-network/base/27-external-secrets/egress/allow-controller-to-kubeapi.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-controller-to-kubeapi
  namespace: external-secrets

spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: external-secrets

  egress:
    - toEntities:
        - kube-apiserver
